# repo-bootstrapper

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python-reusable-ci.yml  release.yml
src/repo_bootstrapper/: __init__.py  cli.py  scaffold.py
tests/: test_cli.py  test_scaffold.py
