[project]
name = "repo-bootstrapper"
version = "0.1.0"
requires-python = ">=3.10"
description = "Template-based repository bootstrap tool"

[project.scripts]
repo-bootstrapper = "repo_bootstrapper.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
